Fix hero text align

--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -68,13 +68,13 @@
 
 .Hero-content {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   position: relative;
 }
 
 @media (min-width: 600px) {
   .Hero-content {
-    justify-content: center;
+    align-items: center;
   }
 }
 
